--- a/presto-hive-common/pom.xml
+++ b/presto-hive-common/pom.xml
@@ -18,5 +18,11 @@
             <groupId>com.facebook.presto</groupId>
             <artifactId>presto-spi</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.facebook.presto.hadoop</groupId>
+            <artifactId>hadoop-apache2</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
